2015-05-17  Per Bothner  <per@bothner.com>

	* larceny-tests/run/time.sps: Don't write megaflops-per-second
	output since it breaks diff-ing the output.

	* larceny-tests/tests/scheme/read.sld: Another Larceny test.
	* larceny-tests/run/read.sps: New test driver.
	* Makefile.am (LARCENY_SIMPLE_TESTS1): Add read.

	* larceny-tests/tests/scheme/complex.sld: Another Larceny test.
	* larceny-tests/tests/scheme/complex.body.scm: Part of new test,
	* larceny-tests/run/complex.sps: New test driver.
	* Makefile.am (LARCENY_SIMPLE_TESTS1): Add complex.

2015-05-16  Per Bothner  <per@bothner.com>

	* misc-test.scm: Quote keywords as needed.  Remove now-redundant test.
	* bad-keywords1.scm: Add test for single final keyword.
	Update warning message text.

2015-05-15  Per Bothner  <per@bothner.com>

	* inlining.expected: Update for removed redundant gotos.

2015-05-14  Per Bothner  <per@bothner.com>

	* inline4.scm: New test.
	* Makefile.am: Update accordingly.

2015-05-13  Per Bothner  <per@bothner.com>

	* clisp-number-tests.scm: Hyperbolic functions are no
	longer expected to fail.

	* larceny-tests/tests/scheme/time.sld: Update from Larceny.

2015-05-10  Per Bothner  <per@bothner.com>

	* larceny-tests/tests/scheme/inexact.sld: New test from Larceny.
	* larceny-tests/run/inexact.sps: New test main program.
	* clisp-number-tests.scm: New file with numerics tests.
	* Makefile.am: Update accordingly.

	* num-test.scm: Expected rationalize failure no longer fails.

	* larceny-tests/tests/scheme/char.body.scm: Re-implement to run
	much faster.

	* larceny-tests/README: New file, lightly edited from Larceny version.

	* larceny-tests/tests/scheme/time.sld: Fix rounding calculation error.

2015-05-07  Per Bothner  <per@bothner.com>

	* larceny-tests: Imported more tests from the Larceny sources.
	Re-arranged to use tests/scheme and run sub-directories to match.
	* Makefile.am: Update accordingly.

2015-05-03  Per Bothner  <per@bothner.com>
